force-app/main/default/objects/geopointe__Geocode__c/geopointe__Geocode__c.object-meta.xml
<CustomObject>
    <description>A cache of geocode information used for mapping purposes.</description>
    <label>Geopointe Geocode</label>
    <nameField>
        <displayFormat>GEO-{0000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Geocodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>