force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Address_Id__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Address_Id__c</fullName>
    <inlineHelpText>Id that uniquely represents the address on this record.</inlineHelpText>
    <label>Address Id DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>