force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__City__c.field-meta.xml
<CustomField>
    <fullName>geopointe__City__c</fullName>
    <inlineHelpText>The city value provided to the geocoder.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>