force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Country__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Country__c</fullName>
    <inlineHelpText>The country value provided to the geocoder.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>