force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Country_ISO__c</fullName>
    <inlineHelpText>The 2 character ISO country value that corresponds to the country sent to the geocoder. This was determined using the Country Code mappings configured in your system.</inlineHelpText>
    <label>Country (ISO)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>