force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__County_clean__c.field-meta.xml
<CustomField>
    <fullName>geopointe__County_clean__c</fullName>
    <label>County (clean)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>