force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Description__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Description__c</fullName>
    <inlineHelpText>This field can be used by customers for any notes needed. This field has no functional significance in the application.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>