force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Geocode_Quality__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geocode_Quality__c</fullName>
    <inlineHelpText>The precision of the geocoded location. Refer to the Geocode Quality reference page (http://www.mapquestapi.com/geocoding/geocodequality.html#granularity) for more information.</inlineHelpText>
    <label>Geocode Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>