force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Geocode_Service__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geocode_Service__c</fullName>
    <inlineHelpText>The 3rd party service used to perform the geocoding.</inlineHelpText>
    <label>Geocode Service DEPRECATED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MapQuest</fullName>
            </value>
            <value>
                <fullName>OpenStreetMap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>