force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Latitude_search__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Latitude_search__c</fullName>
    <externalId>true</externalId>
    <label>Latitude (search)</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>