force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Link_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Link_ID__c</fullName>
    <inlineHelpText>MapQuest identification for the closest road to the address for routing purposes.</inlineHelpText>
    <label>Link ID DEPRECATED</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>