force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Longitude__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Longitude__c</fullName>
    <inlineHelpText>Using for Routing and is the nearest point on a road for the entrance.</inlineHelpText>
    <label>Longitude</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>