force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Longitude_display__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Longitude_display__c</fullName>
    <inlineHelpText>Used for displaying the location on a map</inlineHelpText>
    <label>Longitude (display)</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>