force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Map_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Object__c</fullName>
    <inlineHelpText>Name (&quot;API Name&quot;) of map object.</inlineHelpText>
    <label>Map Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>