force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Parent_Object__c</fullName>
    <inlineHelpText>The object type of the parent record</inlineHelpText>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>