force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Parent_Record__c</fullName>
    <formula>IF( ISBLANK( geopointe__Parent_Record_Id2__c ) , null, 
 HYPERLINK(&quot;/&quot; &amp;  geopointe__Parent_Record_Id2__c ,  geopointe__Parent_Record_Name__c , &quot;_top&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A link that takes you to the parent record.</inlineHelpText>
    <label>Parent Record</label>
    <type>Text</type>
</CustomField>