force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Parent_Record_Id2__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Parent_Record_Id2__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The 18-character record ID of the parent record to this geocode record.</inlineHelpText>
    <label>Parent Record Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>