force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Parent_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Parent_Record_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>The 18-character record ID of the parent record to this geocode record.  There is a 1 to 1 relationship between the parent record and its geocode record.</inlineHelpText>
    <label>Parent Record ID DEPRECATED</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>