force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Parent_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Parent_Record_Name__c</fullName>
    <inlineHelpText>The conversational name of the parent record (e.g. Account Name, Opportunity Name, Case Number, etc.)</inlineHelpText>
    <label>Parent Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>