force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Postal_Code__c</fullName>
    <inlineHelpText>The postal code value provided to the geocoder.</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>