force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Side_of_Street__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Side_of_Street__c</fullName>
    <label>Side of Street DEPRECATED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>