force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__State_Province__c.field-meta.xml
<CustomField>
    <fullName>geopointe__State_Province__c</fullName>
    <inlineHelpText>The street/province value provided to the geocoder.</inlineHelpText>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>