force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__State_Province_clean__c.field-meta.xml
<CustomField>
    <fullName>geopointe__State_Province_clean__c</fullName>
    <label>State/Province (clean)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>