force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Street__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Street__c</fullName>
    <inlineHelpText>The street value provided to the geocoder.</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>