force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Street_clean__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Street_clean__c</fullName>
    <label>Street (clean)</label>
    <type>TextArea</type>
</CustomField>