force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__Uses_Customer_Geocodes__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Uses_Customer_Geocodes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if this record uses geocodes provided by the customer.</inlineHelpText>
    <label>Uses Customer Geocodes</label>
    <type>Checkbox</type>
</CustomField>