force-app/main/default/objects/geopointe__Geocode__c/fields/geopointe__V9_Migration_Complete__c.field-meta.xml
<CustomField>
    <fullName>geopointe__V9_Migration_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>V9 Migration Complete</label>
    <type>Checkbox</type>
</CustomField>