force-app/main/default/objects/geopointe__Geocode__c/listViews/geopointe__All_Records.listView-meta.xml
<ListView>
    <fullName>geopointe__All_Records</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Parent_Object__c</columns>
    <columns>geopointe__Parent_Record__c</columns>
    <columns>geopointe__Street__c</columns>
    <columns>geopointe__City__c</columns>
    <columns>geopointe__State_Province__c</columns>
    <columns>geopointe__Postal_Code__c</columns>
    <columns>geopointe__Country__c</columns>
    <columns>geopointe__Geocode_Quality__c</columns>
    <columns>geopointe__Geocode_Quality_Code__c</columns>
    <columns>geopointe__Geocode_Service__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>