force-app/main/default/objects/geopointe__Geocode__c/listViews/geopointe__Updated_Today.listView-meta.xml
<ListView>
    <fullName>geopointe__Updated_Today</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Parent_Object__c</columns>
    <columns>geopointe__Parent_Record__c</columns>
    <columns>geopointe__Street__c</columns>
    <columns>geopointe__City__c</columns>
    <columns>geopointe__State_Province__c</columns>
    <columns>geopointe__Postal_Code__c</columns>
    <columns>geopointe__Country__c</columns>
    <columns>geopointe__Geocode_Quality__c</columns>
    <columns>geopointe__Geocode_Quality_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Updated Today</label>
</ListView>